fab icon removed, wifi and battery icon added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,33 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.BatteryStatus"
+            android:label="@string/title_activity_battery_status"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.arora.comfortsensing.MainActivity"/>
+        </activity>
+        <activity
+            android:name=".ui.WifiStatus"
+            android:label="@string/title_activity_wifi_status"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.arora.comfortsensing.MainActivity"/>
+        </activity>
+        <activity
+            android:name=".ui.PersonalData"
+            android:label="@string/title_activity_personal_data"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.arora.comfortsensing.MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
